// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend Component Device: desktop renders with all combinations of props 1`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.625rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={true}
  size="small"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={true}
    isMobile={false}
    size="small"
  >
    <legend
      className="c0"
      disabled={true}
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 2`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.625rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={false}
  size="small"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={false}
    isMobile={false}
    size="small"
  >
    <legend
      className="c0"
      disabled={false}
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 3`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.625rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={true}
  size="small"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={true}
    isMobile={false}
    size="small"
  >
    <legend
      className="c0"
      disabled={true}
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 4`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.625rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={false}
  size="small"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={false}
    isMobile={false}
    size="small"
  >
    <legend
      className="c0"
      disabled={false}
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 5`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={true}
  size="medium"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={true}
    isMobile={false}
    size="medium"
  >
    <legend
      className="c0"
      disabled={true}
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 6`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={false}
  size="medium"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={false}
    isMobile={false}
    size="medium"
  >
    <legend
      className="c0"
      disabled={false}
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 7`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={true}
  size="medium"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={true}
    isMobile={false}
    size="medium"
  >
    <legend
      className="c0"
      disabled={true}
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 8`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={false}
  size="medium"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={false}
    isMobile={false}
    size="medium"
  >
    <legend
      className="c0"
      disabled={false}
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 9`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={true}
  size="large"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={true}
    isMobile={false}
    size="large"
  >
    <legend
      className="c0"
      disabled={true}
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 10`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={false}
  size="large"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={false}
    isMobile={false}
    size="large"
  >
    <legend
      className="c0"
      disabled={false}
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 11`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={true}
  size="large"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={true}
    isMobile={false}
    size="large"
  >
    <legend
      className="c0"
      disabled={true}
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with all combinations of props 12`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={false}
  size="large"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={false}
    isMobile={false}
    size="large"
  >
    <legend
      className="c0"
      disabled={false}
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with bold false 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    isMobile={false}
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with bold true 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    isMobile={false}
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with disabled false 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  disabled={false}
>
  <styled.legend
    datatest-id="legend"
    disabled={false}
    isMobile={false}
  >
    <legend
      className="c0"
      disabled={false}
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with disabled true 1`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  disabled={true}
>
  <styled.legend
    datatest-id="legend"
    disabled={true}
    isMobile={false}
  >
    <legend
      className="c0"
      disabled={true}
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with size large 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  size="large"
>
  <styled.legend
    datatest-id="legend"
    isMobile={false}
    size="large"
  >
    <legend
      className="c0"
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with size medium 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  size="medium"
>
  <styled.legend
    datatest-id="legend"
    isMobile={false}
    size="medium"
  >
    <legend
      className="c0"
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: desktop renders with size small 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.625rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  size="small"
>
  <styled.legend
    datatest-id="legend"
    isMobile={false}
    size="small"
  >
    <legend
      className="c0"
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 1`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={true}
  size="small"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={true}
    isMobile={true}
    size="small"
  >
    <legend
      className="c0"
      disabled={true}
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 2`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={false}
  size="small"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={false}
    isMobile={true}
    size="small"
  >
    <legend
      className="c0"
      disabled={false}
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 3`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={true}
  size="small"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={true}
    isMobile={true}
    size="small"
  >
    <legend
      className="c0"
      disabled={true}
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 4`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={false}
  size="small"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={false}
    isMobile={true}
    size="small"
  >
    <legend
      className="c0"
      disabled={false}
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 5`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={true}
  size="medium"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={true}
    isMobile={true}
    size="medium"
  >
    <legend
      className="c0"
      disabled={true}
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 6`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={false}
  size="medium"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={false}
    isMobile={true}
    size="medium"
  >
    <legend
      className="c0"
      disabled={false}
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 7`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={true}
  size="medium"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={true}
    isMobile={true}
    size="medium"
  >
    <legend
      className="c0"
      disabled={true}
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 8`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={false}
  size="medium"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={false}
    isMobile={true}
    size="medium"
  >
    <legend
      className="c0"
      disabled={false}
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 9`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 1rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={true}
  size="large"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={true}
    isMobile={true}
    size="large"
  >
    <legend
      className="c0"
      disabled={true}
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 10`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
  disabled={false}
  size="large"
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    disabled={false}
    isMobile={true}
    size="large"
  >
    <legend
      className="c0"
      disabled={false}
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 11`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 1rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={true}
  size="large"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={true}
    isMobile={true}
    size="large"
  >
    <legend
      className="c0"
      disabled={true}
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with all combinations of props 12`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
  disabled={false}
  size="large"
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    disabled={false}
    isMobile={true}
    size="large"
  >
    <legend
      className="c0"
      disabled={false}
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with bold false 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={false}
>
  <styled.legend
    bold={false}
    datatest-id="legend"
    isMobile={true}
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with bold true 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  bold={true}
>
  <styled.legend
    bold={true}
    datatest-id="legend"
    isMobile={true}
  >
    <legend
      className="c0"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with disabled false 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  disabled={false}
>
  <styled.legend
    datatest-id="legend"
    disabled={false}
    isMobile={true}
  >
    <legend
      className="c0"
      disabled={false}
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with disabled true 1`] = `
.c0 {
  display: table;
  color: #B7BBC2;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  disabled={true}
>
  <styled.legend
    datatest-id="legend"
    disabled={true}
    isMobile={true}
  >
    <legend
      className="c0"
      disabled={true}
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with size large 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 1rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  size="large"
>
  <styled.legend
    datatest-id="legend"
    isMobile={true}
    size="large"
  >
    <legend
      className="c0"
      size="large"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with size medium 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  size="medium"
>
  <styled.legend
    datatest-id="legend"
    isMobile={true}
    size="medium"
  >
    <legend
      className="c0"
      size="medium"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;

exports[`Legend Component Device: mobile renders with size small 1`] = `
.c0 {
  display: table;
  color: #1B1C1E;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  margin: 0 0 var(--spacing-1x);
}

<Legend
  size="small"
>
  <styled.legend
    datatest-id="legend"
    isMobile={true}
    size="small"
  >
    <legend
      className="c0"
      size="small"
    >
      Sample Legend
    </legend>
  </styled.legend>
</Legend>
`;
